Update cron example

--- a/alien_cron.sh.example
+++ b/alien_cron.sh.example
@@ -1,15 +1,9 @@
 #!/usr/bin/env bash
 # wallpaper: cron script for downloading images from Reddit.
 
-# Change these.
+# Change these settings:
 SUBREDDITS='aww,pics'
-#MULTI="USER/MULTI_NAME"
+MULTI=''  # or 'REDDIT_USERNAME/MULTINAME'
 #OUT="/Users/example/Pictures/wallpaper"
-OUT=""
 
-SRC=$(pwd)
-
-ruby "$SRC"/alien_wallpaper.rb \
-  --subreddits="$SUBREDDITS"   \
-  #--multi "$MULTI"             \
-  --out "$OUT"
+alien_wallpaper --subreddits "$SUBREDDITS" --multireddit "$MULTI" --out "$OUT"
