--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "alien-wallpaper"
 version = "0.1.0"
-description = ""
+description = "Download images from Reddit."
 authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
 
 [tool.poetry.dependencies]
@@ -9,7 +9,15 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^19.10b0"
+mypy = "^0.761"
+pylint = "^2.4.4"
+invoke = "^1.4.0"
+
+[tool.poetry.scripts]
+alien_wallpaper = "alien_wallpaper.__main__:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
