--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,16 @@ black = "^19.10b0"
 mypy = "^0.761"
 pylint = "^2.4.4"
 invoke = "^1.4.0"
+isort = "^4.3.21"
 
 [tool.poetry.scripts]
-alien_wallpaper = "alien_wallpaper.__main__:main"
+alien_wallpaper = "alien_wallpaper.run:main"
 
+[tool.isort]
+include_trailing_comma = true
+line_length = 88
+multi_line_output = 3
+use_parentheses = true
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
