--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,17 +13,23 @@ black = "^19.10b0"
 mypy = "^0.761"
 pylint = "^2.4.4"
 invoke = "^1.4.0"
-isort = "^4.3.21"
+pre-commit = "^1.21.0"
+isort = {version = "^4.3.21", extras = ["pyproject"]}
 
 [tool.poetry.scripts]
 alien_wallpaper = "alien_wallpaper.run:main"
 
+[tool.black]
+target_version = ["py38"]
+
 [tool.isort]
 include_trailing_comma = true
+known_first_party = ["alien_wallpaper"]
+known_third_party = ["pytest"]
 line_length = 88
 multi_line_output = 3
 use_parentheses = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
