--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: 3.8
       - name: Install poetry
         run: |
-          python get-poetry.py --preview -y
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
           source "${HOME}/.poetry/env"
       - name: Linting
         run: invoke lint-ci
