--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -16,11 +16,12 @@ on:
   status: {}
 jobs:
   automerge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.6.1"
         env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automerge,!wip"
           MERGE_METHOD: "squash"
           MERGE_COMMIT_MESSAGE: "pull-request-description"
