--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+toml = {version = "^0.10.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -15,6 +16,9 @@ pylint = "^2.4.4"
 invoke = "^1.4.0"
 pre-commit = "^1.21.0"
 isort = {version = "^4.3.21", extras = ["pyproject"]}
+
+[tool.poetry.extras]
+launchd = ["toml"]
 
 [tool.poetry.scripts]
 alien_wallpaper = "alien_wallpaper.run:main"
