Fix CI client secret

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,4 +81,4 @@ jobs:
         run: poetry run invoke test
         env:
           ALIEN_WALLPAPER_CLIENT_ID: "${{ secrets.ALIEN_WALLPAPER_CLIENT_ID }}"
-          ALIEN_WALLPAPER_SECRET: "${{ secrets.ALIEN_WALLPAPER_SECRET }}"
+          ALIEN_WALLPAPER_CLIENT_SECRET: "${{ secrets.ALIEN_WALLPAPER_CLIENT_SECRET }}"
