--- a/.pylintrc
+++ b/.pylintrc
@@ -344,6 +344,7 @@ good-names=f,
            i,
            j,
            k,
+           logger,
            ex,
            Run,
            _
@@ -378,7 +379,7 @@ name-group=
 
 # Regular expression which should only match function or class names that do
 # not require a docstring.
-no-docstring-rgx=^_
+no-docstring-rgx=main
 
 # List of decorators that produce properties, such as abc.abstractproperty. Add
 # to this list to register other decorators that produce valid properties.
