--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-toml = {version = "^0.10.0", optional = true}
+toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -18,9 +18,6 @@ pre-commit = "^1.21.0"
 isort = {version = "^4.3.21", extras = ["pyproject"]}
 praw = "^6.5.1"
 
-[tool.poetry.extras]
-launchd = ["toml"]
-
 [tool.poetry.scripts]
 alien_wallpaper = "alien_wallpaper.console:main"
 
@@ -30,7 +27,7 @@ target_version = ["py38"]
 [tool.isort]
 include_trailing_comma = true
 known_first_party = ["alien_wallpaper"]
-known_third_party = ["pytest"]
+known_third_party = ["praw", "pytest", "toml"]
 line_length = 88
 multi_line_output = 3
 use_parentheses = true
