--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
           poetry config virtualenvs.path ~/.virtualenvs
 
       - name: Run Tests
-        run: poetry run invoke test
+        run: poetry run invoke test --large
         env:
           ALIEN_WALLPAPER_CLIENT_ID: "${{ secrets.ALIEN_WALLPAPER_CLIENT_ID }}"
           ALIEN_WALLPAPER_CLIENT_SECRET: "${{ secrets.ALIEN_WALLPAPER_CLIENT_SECRET }}"
