--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Download images from Reddit."
 authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
@@ -22,15 +22,12 @@ praw = "^6.5.1"
 alien_wallpaper = "alien_wallpaper.console:main"
 
 [tool.black]
-target_version = ["py38"]
+target_version = ["py310"]
 
 [tool.isort]
-include_trailing_comma = true
+profile = "black"
 known_first_party = ["alien_wallpaper"]
 known_third_party = ["praw", "pytest", "toml"]
-line_length = 88
-multi_line_output = 3
-use_parentheses = true
 
 [build-system]
 requires = ["poetry>=0.12"]
