--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,26 +6,28 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-      - id: black
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.942
-    hooks:
-      - id: mypy
-
   - repo: local
     hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
+      - id: black
+        name: black
+        entry: black
         language: system
         types: [python]
 
       - id: isort
         name: isort
         entry: isort
+        language: system
+        types: [python]
+
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        types: [python]
+
+      - id: pylint
+        name: pylint
+        entry: pylint
         language: system
         types: [python]
