--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,15 @@ python = "^3.10"
 toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
 black = "^22.3.00"
-mypy = "^0.942"
-pylint = "^2.13.7"
 invoke = "^1.7.0"
-pre-commit = "^2.18.1"
 isort = "^5.10.1"
+mypy = "^0.942"
 praw = "^7.5.0"
+pre-commit = "^2.18.1"
+pylint = "^2.13.7"
+pytest = "^7.1.1"
+types-toml = "^0.10.5"
 
 [tool.poetry.scripts]
 alien_wallpaper = "alien_wallpaper.console:main"
@@ -28,6 +29,18 @@ target_version = ["py310"]
 profile = "black"
 known_first_party = ["alien_wallpaper"]
 known_third_party = ["praw", "pytest", "toml"]
+
+[tool.mypy]
+python_version = "3.10"
+
+# mypy per-module options:
+[[tool.mypy.overrides]]
+module = [
+    # alphabetical order
+    "invoke",
+    "praw",
+]
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry>=0.12"]
