--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,32 +5,42 @@ description = "Download images from Reddit."
 authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-toml = "^0.10.0"
+python = "^3.10"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^19.10b0"
-mypy = "^0.761"
-pylint = "^2.4.4"
-invoke = "^1.4.0"
-pre-commit = "^1.21.0"
-isort = {version = "^4.3.21", extras = ["pyproject"]}
-praw = "^6.5.1"
+black = "^22.3.00"
+invoke = "^1.7.0"
+isort = "^5.10.1"
+mypy = "^0.942"
+praw = "^7.5.0"
+pre-commit = "^2.18.1"
+pylint = "^2.13.7"
+pytest = "^7.1.1"
+types-toml = "^0.10.5"
 
 [tool.poetry.scripts]
 alien_wallpaper = "alien_wallpaper.console:main"
 
 [tool.black]
-target_version = ["py38"]
+target_version = ["py310"]
 
 [tool.isort]
-include_trailing_comma = true
+profile = "black"
 known_first_party = ["alien_wallpaper"]
 known_third_party = ["praw", "pytest", "toml"]
-line_length = 88
-multi_line_output = 3
-use_parentheses = true
+
+[tool.mypy]
+python_version = "3.10"
+
+# mypy per-module options:
+[[tool.mypy.overrides]]
+module = [
+    # alphabetical order
+    "invoke",
+    "praw",
+]
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry>=0.12"]
